<resources>
    <string name="app_name">CentralDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_contactus">Contact Us</string>
    <string name="action_logout">Log Out</string>
    <string name="introduction">The Ministry of Health and Family Welfare (MoHFW) has developed this Central Dashboard for monitoring of various health programs/schemes being run by the ministry. The Central Dashboard is a comprehensive information management tool which allows visual tracking and analysis of Key Performance Indicators across all healthcare institutions and programs under the MoHFW.\n\n
    The objective of this initiative is to build a comprehensive single platform to access information on Key Performance Indicators (KPIs), sourced from various public health information systems/management Information systems. This information aggregated and visualized on a single portal, will be vital for data driven program planning, monitoring, and management. As new schemes or programs are developed by the MoHFW, the Dashboard system is envisioned to organically incorporate future programs and help in measuring progress\n\n

    </string>
    <string name="dotd">The Dashboard has been developed by the CHI team with the kind collaboration and support from all program teams within the MoHFW. The project has been supervised under the guidance of the eHealth team within the MoHFW\n\n</string>
    <string name="sotd">The Dashboard divides the Health System into 9 major Categories, each with its own unique subcategories\n
1.Health Infrastructure: Health and Wellness Centers(HWCs), PMSSY, Budget, NIN, Ambulances, NOTTO, Blood Banks, FRUs and Dialysis\n
    2.Health Human Resources: Human resources, Nursing, Medical Education, Village health and Sanitation Committee, Allied Health Sciences\n
    3.Health Service Delivery:Central Government Health Scheme (CGHS), Health Care of Elderly, TB Control (Nikshay), m-Health, Reproductive and Child Health (RCH), FamilyPlanning, Maternal Health,Immunization,Child Health,Adolescent Health,Viral Hepatitis Control (NVHCP),Blindness Control (NPCB),National Oral Health (NOHP),Pradhan Mantri Jan ArogyaYojana\n
    4.Surveillance:Integrated Health Information Platform (IHIP),AIDS Control (NACO),Rabies Control (NRCP),Leptospirosis Control,Viral Hepatitis (VHP),Fluorosis Control (NPPCF),Deafness Control (NPPCD),Population-Based Screening (PBS),Zoonotic Diseases (PCZD)\n
    5.Quality of Health Services:MeraAspataal, LaQshya, National Urban Health Mission (NUHM), Right to Information\n
    6.Drugs and Diagnostics:Drug and Vaccine Distribution Management, Affordable Medicines (AMRIT), Health Public Enterprises\n
    7.Regulations: SUGAM (CDSCO)\n
    8.International Health: Memorandum of Understanding (MOU), Statement of Need (SON)\n
    9.Pending References: Action Taken Report (ATR)\n
    The dashboard sources all the data for the programs and schemes directly from the program teams. Each of the sub categories have multiple KPIs displayed within them\n\n
</string>
    <string name="uotd">It is further envisioned that the Dashboard system would collect data from existing public health information systems (i.e. HMIS, IDSP, MCTS, Nikshay etc) through APIs/Web Services to generate KPIs. Exact number and type of the KPIs would be developed in consultation with the MoHFW officials, program teams and domain experts. Based on the needs/roles of the various users/ program managers the KPIs/reports can be generated separately form the Dashboard.\n
    It will be ensured that various MoHFW users/officers have access to the standard set of KPIs as per their role. In addition, all users will be given privileges to get their own set of KPIs developed and displayed based on need. The dashboard system will have such flexibility to allow for users to create their own indicators.\n\n
    </string>
    <string name="address">National Institute of Health and Family Welfare\n
Baba Gang Nath Marg, Munirka, New Delhi-110067.</string>
    <string name="phone">Phones: 91-11-2616 5959</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">SlideShow</string>
    <string name="menu_tools">Tools</string>
    <string name="about_heading"><b><u>Central Dashboard</u></b></string>
    <string name="about_one">The Central Dashboard is a comprehensive information management tool which allows visual tracking and analysis of Key Performance Indicators. It can be leveraged in powerful ways:</string>
    <string name="about_two">To access information on Key Performance Indicators (KPIs) of all MoHFW programmes on a single portal</string>
    <string name="about_three">	To present visualizations that display a bird’s eye view of programme performance,for data driven decision-making</string>
    <string name="about_four"> To evaluate national status of all health-system components</string>
    <string name="preference_key_file">com.example.chi.nin.preference_key_file</string>
    <string name="preference_id">PREFERENCE_ID</string>
    <string name="preference_name_key">PREFERENCE_NAME_KEY</string>
    <string name="preference_email_key">PREFERENCE_EMAIL_KEY</string>
    <string name="preference_stateid_key">PREFERENCE_STATEID_KEY</string>
    <string name="preference_statename_key">PREFERENCE_STATENAME_KEY</string>
    <string name="preference_districtid_key">PREFERENCE_DISTRICTID_KEY</string>
    <string name="preference_districtname_key">PREFERENCE_DISTRICTNAME_KEY</string>
    <string name="preference_role_key">PREFERENCE_ROLE_KEY</string>
    <string name="preference_rolevalue_key">PREFERENCE_ROLEVALUE_KEY</string>
    <string name="preference_nin_id">PREFERENCE_NIN_ID</string>
    <string name="title_activity_minister_programs">MinisterProgramsActivity</string>
    <string name="mohf"><b>MINISTRY OF HEALTH AND FAMILY WELFARE</b> \n DEPARTMENT OF HEALTH AND FAMILY WELFARE

    </string>
    <string name="menu_pmssy">Pradhan Mantri Swasthya Suraksha Yojana (PMSSY)</string>
    <string name="menu_nhrr">National Health Resource Repository</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_nin">National Identification Number(NIN)</string>
    <string name="menu_ambulance">Ambulances</string>
    <string name="menu_notp">Organs and Tissue Transplant(NOTP)</string>
    <string name="menu_bloodbank">Blood Bank</string>
    <string name="menu_nhmfinance">NHM Finance</string>
    <string name="menu_fru">First Referral Unit(FRU)</string>
    <string name="menu_dialysis">Dialysis</string>
    <string name="menu_hospitalsection">Hospital Section</string>
    <string name="title_activity_mi_health_service_delivery">MiHealthServiceDeliveryActivity
    </string>
    <string name="menu_ab_hwc">Ayushman Bharat-Health and Wellness Center (AB-HWC)</string>
    <string name="menu_ab_pmjay">Ayushman Bharat-Pradhan Mantri Jan Arogya Yojana (AB-PMJAY)</string>
    <string name="menu_cghs">Central Goverment Health Sscheme (CGHS)</string>
    <string name="menu_esanjeevani">eSanjeevani</string>
    <string name="menu_nphce">Health Care Of The Elderly (NPHCE)</string>
    <string name="menu_tb">TB Control (Nikshay)</string>
    <string name="menu_m_health">M-Health</string>
    <string name="menu_rch">Reproductive And Child Health (RCH)</string>
    <string name="menu_familyplaning">Family Planing</string>
    <string name="menu_maternalhealth">Maternal Health</string>
    <string name="menu_immunization">Immunization</string>
    <string name="menu_childhealth">Child Health</string>
    <string name="menu_adolescenthealth">Adolescent Health</string>
    <string name="menu_nvhcp">Viral Hepatitis Control(NVHCP)</string>
    <string name="menu_npcb">Blindness Control(NPCB)</string>
    <string name="menu_nmhp">National Mental Health Programme(NMHP)</string>
    <string name="menu_nohp">National Oral Health(NOHP)</string>
    <string name="menu_emr">Emergency Medical Relief(EMR)</string>
    <string name="menu_ihip">Integrated Health Information Platform(IHIP)</string>
    <string name="menu_ncdc">National Center for Disease Control(NCDC)</string>
    <string name="menu_ntcp">Tobacco Control(NTCP)</string>
    <string name="menu_ddap">Drug De-Addiction(DDAP)</string>
    <string name="menu_naco">AIDS Control(NACO)</string>
    <string name="menu_nrcp">Rabies Control(NRCP)</string>
    <string name="menu_lepto">Leptospirosis Control</string>
    <string name="menu_pbs">Population-Based Screening (PBS)/NCD</string>
    <string name="menu_hmis">Health Management Information System(HMIS)</string>
    <string name="menu_vhp">Viral Hepatitis(VHP)</string>
    <string name="menu_nlep">Leprosy Eradication(NLEP)</string>
    <string name="menu_nppcf">Fluorosis Control(NPPCF)</string>
    <string name="menu_nppcd">Deafness Control(NPPCD)</string>
    <string name="menu_pczd">Zoonotic Diseases(PCZD)</string>
    <string name="menu_npcdcs">NPCDCS</string>
    <string name="menu_amr">AMR Containment</string>
    <string name="menu_nvbdcp">National Vector Borne Disease Control Programme(NVBDCP)</string>
    <string name="menu_nfhs">Statistics Division(NFHS and SRS)</string>
    <string name="menu_mera_aspataal">Mera Aspataal</string>
    <string name="menu_ors">Online Registration System(ORS)</string>
    <string name="menu_ehospital">E-hospital</string>
    <string name="menu_laqshya">LaQshya</string>
    <string name="menu_nuhm">National Urban Health Mission(NUHM)</string>
    <string name="menu_rti">Right To Information</string>
    <string name="menu_qa">Quality Assurance</string>
    <string name="menu_fssai">Food Safety and Standards Authority of India(FSSAI)</string>
    <string name="menu_cea">Clinical Establishments Act(CEA)</string>
    <string name="menu_dnv">Drug And Vaccine Distribution Management</string>
    <string name="menu_free">Free DiagnosticsS Services Initiative</string>
    <string name="menu_amrit">Affordable Medecines(Amrit)</string>
    <string name="menu_hpe">Health Public Enterprises</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_sugam">SUGAM(CDSCO)</string>
    <string name="menu_internationalhealth">International Health</string>
    <string name="menu_communityProcess">Community Processes</string>
    <string name="menu_humanResouce">Human Resources</string>
    <string name="menu_alliedHealthSciences">Allied Health Sciences(AHS)</string>
    <string name="menu_nursing">Nursing</string>
    <string name="menu_medicalEducation">Medical Education</string>
    <string name="menu_atr">Action Taken Report(ATR)</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mi_survillance">MiSurvillanceActivity</string>
    <string name="title_activity_ihip">IhipActivity</string>
    <string name="title_activity_pbs">PbsActivity</string>
    <string name="title_activity_mi_quality_of_health_service">MiQualityOfHealthServiceActivity
    </string>
    <string name="title_activity_mi_drugs_and_diagnostics">MiDrugsAndDiagnostics</string>
    <string name="title_activity_mi_regulations">MiRegulations</string>
    <string name="title_activity_mi_international_health">MiInternationalHealth</string>
    <string name="title_activity_international_health">International Health</string>
</resources>