<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AboutUsFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:background="#f58020"
        android:padding="5dp"
        android:text="About Central Dashboard"
        android:textColor="@color/White" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >

            <TextView
                android:id="@+id/intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Introduction"
                android:textColor="@color/Black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/intro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction"
                android:padding="5dp"/>


            <TextView
                android:id="@+id/dotd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Development Of The Dashboard"
                android:textColor="@color/Black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/dotd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dotd"
                android:padding="5dp"
                />



            <TextView
                android:id="@+id/sotd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Structure Of The Dashboard"
                android:textColor="@color/Black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/sotd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sotd"
                android:padding="5dp"
                />

            <TextView
                android:id="@+id/uotd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Utilization Of The Dashboard"
                android:textColor="@color/Black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/uyotd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uotd"
                android:padding="5dp"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>